cmake_minimum_required(VERSION 3.5)

project(metapro VERSION 0.0.1$ENV{TRAVIS_BUILD_NUMBER})

add_executable(meta main.cpp)

set_target_properties(meta PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    COMPILE_OPTIONS "-Wall;-Wpedantic;-Wextra"
)

install(TARGETS meta RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT HankHenshaw at github.com)

include(CPack)